--- a/JudgingSystem/templates/overview.html
+++ b/JudgingSystem/templates/overview.html
@@ -37,27 +37,30 @@
 $(function() {
     // This lets you click on the table rows.
     $(".clickable").click(function() {
-        console.log("test");
         window.location = "/project/" + $(this).data("href") + "/";
     });
-    $("#submit-ratings").click(function() {
+    $("#submit-ratings").click(function(e) {
+        e.preventDefault();
         var valid = true;
         $("td").each(function() {
-            if (this.text == "Not Yet Rated")
+            if ($(this).text() == "Not yet rated")
             {
                 alert("You must rate or pass every project.");
                 valid = false;
+                return false;
             }
         });
-        if (!valid) {
-            return;
-        }
-        $.ajaxSetup({
-            headers: { "X-CSRFToken":  $("input[name='csrfmiddlewaretoken']").attr("value")}
-        });
-        $.post(".", {submitted: true}, function() {
-                window.location = "/complete";
-        });
+        setTimeout(function() {
+            if (!valid) {
+                return;
+            }
+            $.ajaxSetup({
+                headers: { "X-CSRFToken":  $("input[name='csrfmiddlewaretoken']").attr("value")}
+            });
+            $.post(".", {submitted: true}, function() {
+                    window.location = "/complete";
+            });
+        }, 100000)
     })
 });
 </script>
